--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -1,6 +1,62 @@
 //
 // For guidance on how to add CSS and SCSS see:
 // https://prototype-kit.service.gov.uk/docs/adding-css-javascript-and-images
-// 
+//
 
 // Add extra styles here
+.app-summary-list--compact {
+  @include govuk-font(16);
+  margin-bottom: 0;
+
+  .govuk-summary-list__key, .govuk-summary-list__value {
+    padding-bottom: govuk-spacing(0);
+  }
+
+  @include govuk-media-query($from: tablet) {
+    .govuk-summary-list__key {
+      width: 37%;
+    }
+  }
+}
+
+.app-jobs {
+  margin-bottom: govuk-spacing(4);
+}
+
+.app-jobs__item {
+  border-bottom: 1px solid $govuk-border-colour;
+  padding-top: govuk-spacing(3);
+  padding-bottom: govuk-spacing(3);
+
+  &:first-of-type {
+    padding-top: 0;
+  }
+
+  h2 {
+    margin-bottom: govuk-spacing(1);
+  }
+
+  .app-jobs__address {
+    margin-bottom: govuk-spacing(1);
+    @include govuk-media-query($from: tablet) {
+      margin-bottom: 0;
+    }
+  }
+
+  .govuk-summary-list {
+    @include govuk-font(16);
+    margin-bottom: 0;
+  }
+
+  .govuk-summary-list__key, .govuk-summary-list__value {
+    padding-bottom: govuk-spacing(0);
+  }
+
+  .govuk-summary-list__row:last-child {
+    margin-bottom: 0;
+
+    .govuk-summary-list__value {
+      margin-bottom: 0;
+    }
+  }
+}
