--- a/app/views/index.html
+++ b/app/views/index.html
@@ -1,72 +1,20 @@
 {% extends "layouts/main.html" %}
 
-{% set title = 'Referrals' %}
-
-{% block pageTitle %}
-{{title}} – {{serviceName}} – GOV.UK
-{% endblock %}
+{% set title = 'Prototype' %}
 
 {% block content %}
 
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds-from-desktop">
       <h1 class="govuk-heading-xl">
-        {{ title }} ({{data.referrals.length}})
+        {{ title }}
       </h1>
 
-      {{data.referrals | log}}
-      <div class="app-jobs">
-        {% for referral in data.referrals %}
-          <div class="app-jobs__item">
-            <h2 class="govuk-heading-m">
-              <a href="/referral/{{referral.id}}">{{referral.teacher.firstName}} {{referral.teacher.lastName}}</a>
-            </h2>
-            {{ govukSummaryList({
-              classes: 'govuk-summary-list--no-border app-summary-list--compact',
-              rows: [
-                {
-                  key: {
-                    text: "Submission date"
-                  },
-                  value: {
-                    text: referral.submissionDate | date
-                  }
-                },
-                {
-                  key: {
-                    text: "Referrer"
-                  },
-                  value: {
-                    html: referral.referrer.name
-                  }
-                }
-              ]
-            }) }}
-          </div>
-        {% endfor %}
-      </div>
+      {{ govukButton({
+        text: "Sign in",
+        href: '/referrals'
+      }) }}
     </div>
   </div>
-
-  {{ govukPagination({
-    next: {
-      href: "#"
-    },
-    items: [
-      {
-        number: 1,
-        href: "#",
-        current: true
-      },
-      {
-        number: 2,
-        href: "#"
-      },
-      {
-        number: 3,
-        href: "#"
-      }
-    ]
-  }) }}
 
 {% endblock %}
