--- a/app/views/layouts/main.html
+++ b/app/views/layouts/main.html
@@ -4,3 +4,7 @@ https://prototype-kit.service.gov.uk/docs/layouts
 #}
 
 {% extends "govuk-prototype-kit/layouts/govuk-branded.html" %}
+
+{% block pageTitle %}
+{{title}} – {{serviceName}} – GOV.UK
+{% endblock %}
