--- a/app/views/layouts/main.html
+++ b/app/views/layouts/main.html
@@ -5,6 +5,8 @@ https://prototype-kit.service.gov.uk/docs/layouts
 
 {% extends "govuk-prototype-kit/layouts/govuk-branded.html" %}
 
+{% from "_components/formatted-address/macro.njk" import appFormattedAddress %}
+
 {% block pageTitle %}
-{{title}} – {{serviceName}} – GOV.UK
+  {{title}} – {{serviceName}} – GOV.UK
 {% endblock %}
