--- a/app/views/referrals/index.html
+++ b/app/views/referrals/index.html
@@ -10,7 +10,7 @@
 
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds-from-desktop">
-      <h1 class="govuk-heading-xl">
+      <h1 class="govuk-heading-l">
         {{ title }} ({{referrals.length}})
       </h1>
 
