Add form variants for employer and public users

--- a/app/views/referrals/index.html
+++ b/app/views/referrals/index.html
@@ -36,7 +36,7 @@
                     text: "Referrer"
                   },
                   value: {
-                    html: referral.referrer.name
+                    html: referral.referrer.firstName + ' ' + referral.referrer.lastName
                   }
                 }
               ]
