Add email address and remove relationship

--- a/app/views/referrals/show.html
+++ b/app/views/referrals/show.html
@@ -400,12 +400,12 @@
           } if referral.referrer.jobTitle,
           {
             key: {
-              html: "Relationship to teacher"
+              html: "Email address"
             },
             value: {
-              html: referral.referrer.relationship
+              html: referral.referrer.emailAddress
             }
-          } if referral.referrer.relationship,
+          },
           {
             key: {
               html: "Phone number"
