Only show phone number for teacher if they have one

--- a/app/views/referrals/show.html
+++ b/app/views/referrals/show.html
@@ -96,7 +96,7 @@
             value: {
               html: referral.teacher.phoneNumber
             }
-          } if referral.teacher.emailAddress,
+          } if referral.teacher.phoneNumber,
           {
             key: {
               html: "Address"
